# bisque

./: .gitignore  Cargo.toml  LICENSE
crates/alloc/: Cargo.toml
crates/alloc/docs/: mimalloc-heap-memlimit.md  mimalloc-v3-heap-memlimit.md
crates/alloc/examples/: art_bench.rs  bench_arc_variants.rs  benchmark_striped_arc.rs  bytes_bench.rs  counter_bench.rs  epoch_bench.rs  epoch_seq.rs  heap_bench.rs  sharded_art_bench.rs  simulate_epoch_writing.rs  slab_bench.rs  spsc_bench.rs
crates/alloc/examples/rart/: alloc_count.rs  art_cmp.rs  bench.rs  cow_arc_bench.rs  cow_nosnapshot.rs  idiomatic_interface.rs  pub_bench.rs
crates/alloc/fuzz/: Cargo.toml
crates/alloc/fuzz/fuzz_targets/: fuzz_art.rs  (+4 more)
crates/alloc/mimalloc-sys/: Cargo.toml
crates/alloc/seize/: .cargo_vcs_info.json  Cargo.toml
crates/alloc/src/: arc.rs  boxed.rs  heap.rs  lib.rs  os_mmap.rs  slab.rs  string.rs  striped.rs  tlrc.md  tlrc.rs  vec.rs  wait_queue.rs
crates/alloc/tests/: art_repro.rs
crates/bisque/: Cargo.toml  README.md
crates/bisque/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  mq.rs  server.rs  ws.rs
crates/bisque/tests/: server_integration.rs
crates/client/: Cargo.toml
crates/client/examples/: s3_client_query.rs
crates/client/src/: client.rs  client_store.rs  cold_store.rs  ipc.rs  lib.rs
crates/client/tests/: bisque_client.rs
crates/lance/: Cargo.toml  DESIGN.md
crates/lance/docs/: architecture.md  client.md  configuration.md  index.md  opentelemetry.md  query-engines.md  raft-recovery.md  storage-engine.md  test-coverage-report.md  transactions.md  write-path.md
crates/lance/examples/: flight_sql.rs  log_pipeline.rs  postgres_server.rs  s3_client_query.rs  write_bench.rs
crates/lance/src/: BUILD.md  NOTES.md  async_apply.rs  catalog_events.rs  client.rs  client_store.rs  codec.rs  cold_store.rs  config.rs  engine.rs  error.rs  flight.rs  fts.rs  internal_metrics.rs  ipc.rs  lib.rs  manifest.rs  operations.rs  postgres.rs  query.rs  raft.rs  s3_server.rs  s3_store.rs  segment_sync.rs  state_machine.rs  sys_catalog.rs  table_engine.rs  types.rs  version_pins.rs  write_batcher.rs  write_processor.rs
crates/lance/tests/: engine_lifecycle.rs  otel_receiver.rs  raft_cluster.rs  segment_sync.rs  transactions.rs  write_batcher.rs  write_processor.rs
crates/maniac/: Cargo.toml
crates/maniac/examples/: README.md  benchmark_striped_arc.rs  blocking_pool_bench.rs  io_contract_bench.rs  io_pool_example.rs  scheduler_stress.rs  tcp_benchmark.rs  tcp_echo.rs  tcp_echo_tls.rs  tcp_echo_tokio.rs  waker_bench.rs
crates/maniac/src/: lib.rs
crates/meta/: Cargo.toml
crates/meta/src/: config.rs  engine.rs  error.rs  lib.rs  node.rs  state_machine.rs  token.rs  types.rs
crates/meta/tests/: integration.rs
crates/mq/: Cargo.toml  design.md
crates/mq-amqp/: Cargo.toml  design.md
crates/mq-amqp/docs/: 1.0-impl.md  1.0-protocol.md  amqp-1.0-impl.md  compatibility.md
crates/mq-amqp/src/: broker.rs  codec.rs  connection.rs  lib.rs  link.rs  server.rs  transport.rs  types.rs
crates/mq-kafka/: Cargo.toml  design.md
crates/mq-kafka/docs/: compatibility.md  kafka-impl.md  mq-opt.md  protocol.md
crates/mq-kafka/src/: assignment.rs  auth.rs  codec.rs  connection.rs  coordinator.rs  handler.rs  lib.rs  partition.rs  server.rs  txn.rs  types.rs
crates/mq-mqtt/: Cargo.toml  design.md
crates/mq-mqtt/docs/: 3.1.1-impl.md  3.1.1-protocol.md  5.0-impl.md  5.0-protocol.md  bytes-refactor.md  compatibility.md  mq-optimization.md  mq-optimizations-2.md  mq-optimizations.md  mqtt-3.1.1-impl.md  mqtt-5.0-impl.md  mqtt-5.0-spec.md
crates/mq-mqtt/examples/: format_comparison_bench.rs  mqtt_adapter_bench.rs
crates/mq-mqtt/src/: auth.rs  codec.rs  lib.rs  server.rs  session.rs  session_store.rs  transport.rs  types.rs
crates/mq-protocol/: Cargo.toml
crates/mq-protocol/src/: error.rs  flat.rs  frame.rs  lib.rs  tag.rs  types.rs
crates/mq-protocol/tests/: connection_integration.rs  flat_message_mqtt_flags.rs
crates/mq-server/: Cargo.toml
crates/mq-server/src/: error.rs  handler.rs  lib.rs  scheduler.rs  session.rs  subscription.rs
crates/mq-sqs/: Cargo.toml  design.md
crates/mq-sqs/src/: error.rs  handler.rs  lib.rs  router.rs  types.rs
crates/mq/docs/: async-apply.md  codec-plan.md  codec.md  design.md  disk_format.md  kafka.md  mqtt.md  parallel-apply.md  purge.md  testing.md  wire-format.md
crates/mq/examples/: bench.rs  dedup_bench.rs  forward_bench.rs  parallel_apply_bench.rs
crates/mq/src/: actor.rs  async_apply.rs  codec.rs  config.rs  consumer.rs  consumer_group.rs  cursor.rs  engine.rs  exchange.rs  flat.rs  forward.rs  job.rs  lib.rs  manifest.rs  metadata.rs  notifier.rs  producer.rs  purge.rs  queue.rs  raft.rs  raft_writer.rs  retention.rs  segment_index.rs  session.rs  state_machine.rs  topic.rs  types.rs  write_batcher.rs
crates/mq/tests/: async_apply_integration.rs  async_apply_raft_integration.rs  backpressure_integration.rs  cursor_integration.rs  dedup_integration.rs  engine_integration.rs  flat_integration.rs  gap_fixes.rs  malformed_messages.rs  manifest_integration.rs  mqtt_optimizations.rs  phase2_optimizations.rs  queue_notifier.rs  retained_messages.rs  retained_purge.rs  retention_integration.rs  segment_sync_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: catalog_events.rs  lib.rs  ws.rs
crates/raft/: Cargo.toml
crates/raft/examples/: btreemap_vs_congee_bench.rs  dashmap_vs_congee_bench.rs  multi_raft_cluster.rs  network_stress_test.rs  storage_bench.rs  tokio_raft.rs
crates/raft/src/: codec.rs  heap_group.rs  lib.rs  manager.rs  manifest.rs  manifest_mdbx.rs  network.rs  network_tests.rs  record_format.rs  rpc_server.rs  segment_archive.rs  segment_sync.rs  storage.rs  storage_mmap.rs  test_support.rs  transport_tcp.rs  type_config.rs
crates/raft/tests/: manifest_wal.rs  multi_raft_smoke.rs  network_bench.rs  network_integration.rs  raft_e2e.rs  tiered_storage_integration.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: wasmtime_async.rs  wasmtime_sync.rs
crates/runtime/src/: lib.rs
(+295 files in other folders)
