[workspace]
members = [
    #    "crates/bop-aof",
    #    "crates/bop-proto",
    #    "crates/bop-protoc",
    # "crates/maniac-mdbx",
    # "crates/bop-mpmc",
    # "crates/vertx-cluster",
    # "crates/maniac-allocator",
    # "crates/maniac-storage",
    # "crates/maniac-sys",
    # "crates/maniac-usockets",
    # "crates/macros",
    "crates/maniac",
    "crates/raft",           # maniac-raft: OpenRaft adapter for Maniac runtime
    "crates/protocol",       # bisque-protocol: Shared WebSocket protocol types
    "crates/client",         # bisque-client: Unified client for bisque clusters
    "crates/lance",          # bisque-lance: Distributed search & analytics storage engine
    "crates/mq",             # bisque-mq: Distributed messaging engine (topics, queues, actors, jobs)
    "crates/mq-protocol",    # bisque-mq-protocol: Binary wire protocol for MQ consumers
    "crates/mq-server",      # bisque-mq-server: Server-side consumer handler for MQ
    "crates/mq-sqs",         # bisque-mq-sqs: SQS-compatible HTTP API adapter
    "crates/mq-mqtt",        # bisque-mq-mqtt: MQTT 3.1.1/5.0 protocol adapter
    "crates/mq-amqp",        # bisque-mq-amqp: AMQP 0-9-1 protocol adapter
    "crates/mq-kafka",       # bisque-mq-kafka: Kafka binary protocol adapter
    "crates/meta",           # bisque-meta: Multi-tenant control plane
    "crates/bisque",         # bisque: Unified server with auth middleware
    # "moon/rapp",
    # "crates/rusqlite",
    # "crates/libsql-ffi",
    # "crates/libsql-sys",
    # "crates/sqlite3-parser",
    # "crates/nuraft",
    # "crates/libsql",
    # "crates/wasmtime",
    #    "crates/sanakirja-core",
    #    "crates/sanakirja",
    # "crates/bisque-runtime",
]
resolver = "2"
edition = "2024"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Bisque Team"]
description = "Bisque Open Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"
homepage = "https://github.com/bisque-io/bop"
documentation = "https://docs.rs/bop"
keywords = ["async", "runtime", "concurrency"]
categories = ["asynchronous", "concurrency"]

[workspace.dependencies]
allocator-api2 = "0.4"
anyerror = "0.1"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query"] }
arrow = { version = "57", default-features = false }
arrow-array = { version = "57", default-features = false }
arrow-cast = { version = "57", default-features = false, features = ["prettyprint"] }
arrow-flight = { version = "57", default-features = false, features = ["flight-sql-experimental"] }
arrow-ipc = { version = "57", default-features = false }
arrow-schema = { version = "57", default-features = false }
arc-swap = "1.8"
lru = "0.14"
async-entry = "0.3"
auto-const-array = "0.2"
aws-lc-rs = "1.15"
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
bindgen = "0.72"
bitflags = "2"
bumpalo = { version = "3.17.0", features = ["collections", "boxed"] }
bytes = { version = "1", features = ["serde"] }
byte-unit = "5"
byteorder = "1.5"
cc = "1.2"
chrono = "0.4"
clap = { version = "4.1", features = ["derive", "env"] }
cfg-if = "1"
congee = "0.4.1"
core_affinity = "0.8"
crc32fast = "1.4"
crc-fast = { version = "1.10", default-features = false, features = ["std"] }
criterion = { version = "0.8", features = ["html_reports"] }
cron = "0.15"
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
crossfire = "3.1"
dashmap = "6.1"
papaya = "0.2"
scc = "3.6"
derive_more = { version = "2", features = [
    "std",
    "from",
    "try_into",
    "display",
] }
fastwebsockets = { version = "0.10", features = ["upgrade", "with_axum"] }
flume = "0.12"
futures = "0.3"
futures-io = "0.3"
futures-lite = "2.6"
futures-util = "0.3"
# ghost-cell = "0.2.6"
hdrhistogram = "7.5"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.8" }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
datafusion = { version = "52.1.0", default-features = false }
datafusion-expr = { version = "52.1.0", default-features = false }
datafusion-physical-plan = { version = "52.1.0", default-features = false }
datafusion-common = { version = "52.1.0", default-features = false }
datafusion-postgres = { version = "0.14", default-features = false }
lance = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false, features = ["fp16kernels", "aws"] }
lance-index = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false }
lance-linalg = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false, features = ["fp16kernels"] }
lance-io = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false }
lance-table = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false }
lance-core = { git = "https://github.com/lance-format/lance", branch = "main", default-features = false }
libmdbx = "0.6"
log = "0.4"
loom = "0.7"
maplit = "1"
memchr = "2.7"
memmap2 = "0.9"
metrics = "0.24"
minio = "0.3"
mio = { version = "1.1", features = ["os-poll", "net", "os-ext"] }
multimap = "0.10"
native-tls = "0.2"
nix = { version = "0.30", features = ["sched"] }
once_cell = "1.21"
parking_lot = "0.12"
promql-parser = "0.4"
prost = { version = "0.14", default-features = false }
pin-project-lite = "0.2"
pollster = "0.4"
pretty_assertions = "1"
proc-macro2 = "1.0.60"
proptest = "1.0"
quote = "1"
rand = "0.9"
regex = "1"
rcgen = "0.13"
reusable-box-future = { version = "0.2" }
rlsf = "0.2"
rustc-hash = "2.0"
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.8"
rustls-pemfile = "2.0"
rustls-webpki = "0.103"
semver = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
smallvec = { version = "1", features = ["serde", "write"] }
object_store = { version = "0.12", features = ["aws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmp-serde = "1"
snap = "1"
snmalloc-rs = "0.3"
socket2 = { version = "0.6", features = ["all"] }
syn = "2"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "router", "gzip"] }
tower-http = { version = "0.6", default-features = false }
tonic-prost = "0.14"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }
tokio-test = "0.4"
tokio-util = "0.7"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
validit = "0.2"
#vertx-cluster = { path = "crates/vertx-cluster", version = "0.1.0" }
webpki-roots = "1.0.4"
zstd = "0.13"

# bop-aof = { path = "crates/bop-aof", version = "0.1.0" }
#bop-protoc = { path = "crates/bop-protoc", version = "0.1.0" }
# maniac-mdbx = { path = "crates/maniac-mdbx", version = "0.1.0" }
# bop-mpmc = { path = "crates/bop-mpmc", version = "0.1.0" }
#bop-proto = { path = "crates/bop-proto", version = "0.1.0" }
# nuraft = { path = "crates/nuraft", version = "0.1.0" }
# maniac-storage = { path = "crates/maniac-storage", version = "0.1.0" }
# maniac-allocator = { path = "crates/maniac-allocator", version = "0.1.0", default-features = false }
# maniac-sys = { path = "crates/maniac-sys", version = "0.1.0" }
# maniac-usockets = { path = "crates/maniac-usockets", version = "0.1.0", default-features = false }
bisque-client = { path = "crates/client", version = "0.1.0" }
bisque-lance = { path = "crates/lance", version = "0.1.0" }
bisque-mq = { path = "crates/mq", version = "0.1.0" }
bisque-mq-protocol = { path = "crates/mq-protocol", version = "0.1.0" }
bisque-mq-server = { path = "crates/mq-server", version = "0.1.0" }
bisque-mq-sqs = { path = "crates/mq-sqs", version = "0.1.0" }
bisque-mq-mqtt = { path = "crates/mq-mqtt", version = "0.1.0" }
bisque-mq-amqp = { path = "crates/mq-amqp", version = "0.1.0" }
bisque-mq-kafka = { path = "crates/mq-kafka", version = "0.1.0" }
bisque-protocol = { path = "crates/protocol", version = "0.1.0" }
bisque-raft = { path = "crates/raft", version = "0.1.0" }
maniac = { path = "crates/bisque-runtime", version = "0.1.0" }
# maniac = { path = "crates/maniac", version = "0.1.0" }
# maniac-macros = { path = "crates/macros", version = "0.1.0" }
# maniac-raft = { path = "crates/raft", version = "0.1.0" }
# Upstream openraft from git
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic", "metrics", "trace", "logs", "with-serde"] }
openraft = { git = "https://github.com/databendlabs/openraft", branch = "main", default-features = false, features = [
    "serde",
    "tokio-rt",
    "type-alias",
] }
openraft-macros = { git = "https://github.com/databendlabs/openraft", branch = "main" }
# maniac-rusqlite = { path = "crates/rusqlite", version = "0.9.29" }
# maniac-libsql-ffi = { path = "crates/libsql-ffi", version = "3.45.1" }
# maniac-libsql-sys = { path = "crates/libsql-sys", version = "3.45.1" }
# maniac-sqlite3-parser = { path = "crates/sqlite3-parser", version = "0.13.0" }
# maniac-wasmtime = { path = "crates/wasmtime", version = "0.1.0" }
#sanakirja-core = { path = "crates/sanakirja-core", version = "1.4.1" }
#sanakirja = { path = "crates/sanakirja", version = "1.4.1" }

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
strip = "symbols"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

# Patches for incompatible dependencies
[patch.crates-io]
