[package]
name = "bisque"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Unified server composing bisque-lance, bisque-meta, and future engines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["database", "analytics", "multi-tenant", "raft"]
categories = ["database-implementations"]

[[bin]]
name = "bisque"
path = "src/main.rs"

[dependencies]
# Bisque engines
bisque-lance = { path = "../lance" }
bisque-meta = { path = "../meta" }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
