[package]
name = "bisque"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Unified server composing bisque-lance, bisque-meta, and future engines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["database", "analytics", "multi-tenant", "raft"]
categories = ["database-implementations"]

[[bin]]
name = "bisque"
path = "src/main.rs"

[dependencies]
# Bisque engines
bisque-lance = { workspace = true }
bisque-meta = { path = "../meta" }
bisque-protocol = { workspace = true }
bisque-raft = { workspace = true }
openraft = { workspace = true, features = ["tokio-rt"] }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }

# WebSocket
fastwebsockets = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Metrics
metrics = { workspace = true }

# Error handling
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Allocator
snmalloc-rs = { workspace = true }

# Networking
socket2 = { workspace = true }

# Utilities
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Arrow / DataFusion (for SQL execution via WS)
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
rmp-serde = { workspace = true }
fastwebsockets = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bisque-protocol = { workspace = true }
bisque-meta = { path = "../meta" }
bisque-lance = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
