[package]
name = "bisque-lance"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Distributed search & analytics storage engine built on Lance + Raft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["lance", "raft", "columnar", "search", "analytics"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Bisque
bisque-raft = { workspace = true }

# Raft consensus
openraft = { workspace = true, features = ["tokio-rt"] }

# Lance columnar storage
lance = { workspace = true }
lance-index = { workspace = true }
lance-linalg = { workspace = true }

# DataFusion query engine
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-common = { workspace = true }

# Arrow in-memory format
arrow = { workspace = true, features = ["ipc"] }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }

# gRPC
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bytes = { workspace = true }

# Async
async-trait = "0.1"

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
lance = { workspace = true }
lance-index = { workspace = true }
