[package]
name = "bisque-lance"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Distributed search & analytics storage engine built on Lance + Raft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["lance", "raft", "columnar", "search", "analytics"]
categories = ["database-implementations", "data-structures"]

[features]
default = ["tls"]
tls = ["dep:tokio-rustls", "dep:rustls"]

[dependencies]
# Bisque
bisque-raft = { workspace = true }
bisque-meta = { path = "../meta" }
bisque-protocol = { workspace = true }

# Raft consensus
openraft = { workspace = true, features = ["tokio-rt"] }

# Lance columnar storage
lance = { workspace = true }
lance-index = { workspace = true }
lance-linalg = { workspace = true }
lance-table = { workspace = true }

# DataFusion query engine
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-common = { workspace = true }

# Arrow in-memory format
arrow = { workspace = true, features = ["ipc"] }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }

# HTTP
hyper = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# PostgreSQL wire protocol
datafusion-postgres = { workspace = true }

# OpenTelemetry
opentelemetry-proto = { workspace = true }

# HTTP (Tempo / Prometheus / Loki / S3 / WebSocket client)
http-body-util = { workspace = true }
axum = { workspace = true }
snap = { workspace = true }
hex = { workspace = true }
promql-parser = { workspace = true }
regex = { workspace = true }
object_store = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
rmp-serde = { workspace = true }
bytes = { workspace = true }

# Async
async-trait = "0.1"

# Embedded KV store for crash-consistent manifest
libmdbx = { workspace = true }

# WebSocket
fastwebsockets = { workspace = true }

# TLS (optional, for segment sync)
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# Utilities
arc-swap = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
crossfire = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bisque-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
bisque-raft = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
lance = { workspace = true }
lance-index = { workspace = true }
lance-table = { workspace = true }
openraft = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
