[package]
name = "bisque-meta"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Control plane for bisque multi-tenant distributed cluster"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["raft", "control-plane", "multi-tenant", "routing"]
categories = ["database-implementations"]

[dependencies]
# Bisque
bisque-raft = { workspace = true }

# Raft consensus
openraft = { workspace = true, features = ["tokio-rt"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
base64 = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# Storage
libmdbx = { workspace = true }

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
socket2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
