[package]
name = "bisque-mq-amqp"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "AMQP 1.0 protocol adapter for bisque-mq"
license.workspace = true

[dependencies]
bisque-mq = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
