[package]
name = "bisque-mq-amqp"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "AMQP 1.0 protocol adapter for bisque-mq"
license.workspace = true

[features]
default = ["tls"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]

[dependencies]
bisque-mq = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
metrics = { workspace = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
