[package]
name = "bisque-mq-mqtt"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "MQTT 3.1.1/5.0 protocol adapter for bisque-mq"
license.workspace = true

[dependencies]
bisque-mq = { workspace = true }
bytes = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
