[package]
name = "bisque-mq-sqs"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "SQS-compatible HTTP API adapter for bisque-mq"
license.workspace = true

[dependencies]
bisque-mq = { workspace = true }
bisque-raft = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
