[package]
name = "bisque-mq"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Distributed messaging engine for bisque: topics, queues, actors, and jobs"
license.workspace = true

[dependencies]
arc-swap = { workspace = true }
bincode = { workspace = true }
bisque-mq-protocol = { workspace = true }
bisque-raft = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
crc64fast-nvme = { workspace = true }
cron = { workspace = true }
crossfire = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
libmdbx = { workspace = true }
metrics = { workspace = true }
openraft = { workspace = true, features = ["tokio-rt"] }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[features]
test-util = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { workspace = true }
