[package]
name = "bisque-mq"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Distributed messaging engine for bisque: topics, queues, actors, and jobs"
license.workspace = true

[dependencies]
arc-swap = { workspace = true }
bincode = { workspace = true }
bisque-mq-protocol = { workspace = true }
bisque-raft = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
crc-fast = { workspace = true }
cron = { workspace = true }
crossbeam-utils = { workspace = true }
crossfire = { workspace = true }
papaya = { workspace = true }
futures = { workspace = true }
libmdbx = { workspace = true }
metrics = { workspace = true }
openraft = { workspace = true, features = ["tokio-rt"] }
parking_lot = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = ["tls"]
test-util = []
tls = ["dep:tokio-rustls", "dep:rustls"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
